--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <!-- ionic/angularjs js -->
     <!--<script src="lib/ionic/js/ionic.bundle.js"></script>-->
     <!--<script src="lib/ngCordova/dist/ng-cordova.js"></script>-->
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=61568d0a24fa268b6ad5d45f0df2cdb1"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
